--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "autoprefixer": "^8.6.4",
     "node-sass": "^4.9.0",
     "parcel": "^1.9.4"
   }
