--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
   "devDependencies": {
     "node-sass": "^4.9.0",
     "parcel": "^1.9.4"
+  },
+  "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.1.0"
   }
 }
